cppcheck_report.txt
src/HX711.cpp:251:36: error: syntax error: <) [syntaxError]
    while(::timercmp(&tNow, &tEnd, <)) {
                                   ^
src/Mass.cpp:60:0: style: The function 'convertTo' is never used. [unusedFunction]

^
src/SimpleHX711.cpp:144:0: style: The function 'getBase' is never used. [unusedFunction]

^
src/SimpleHX711.cpp:140:0: style: The function 'getChannel' is never used. [unusedFunction]

^
src/SimpleHX711.cpp:128:0: style: The function 'getOffset' is never used. [unusedFunction]

^
src/SimpleHX711.cpp:114:0: style: The function 'getReferenceUnit' is never used. [unusedFunction]

^
src/Mass.cpp:52:0: style: The function 'getUnit' is never used. [unusedFunction]

^
src/SimpleHX711.cpp:136:0: style: The function 'setChannel' is never used. [unusedFunction]

^
src/SimpleHX711.cpp:132:0: style: The function 'setOffset' is never used. [unusedFunction]

^
src/Mass.cpp:56:0: style: The function 'setUnit' is never used. [unusedFunction]

^
src/SimpleHX711.cpp:161:0: style: The function 'tare' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

